feat: stylus切换为scss,新增stylelint检查样式规范

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -6,10 +6,10 @@
 
 .van-tabs {
   .van-tabs__line {
-    background greenColor
+    background: #329a39;
   }
 
   .van-tab--active {
-    color greenColor
+    color: #329a39;
   }
 }
