--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 /*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -429,7 +430,7 @@ template {
   display: none;
 }
 
-/*Remove most spacing between table cells.*/
+/* Remove most spacing between table cells. */
 table {
   border-collapse: collapse;
   border-spacing: 0;
